--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ djangorestframework = "==3.11.0"
 pytz = "==2019.3"
 sqlparse = "==0.3.1"
 gunicorn = "==20.0.4"
+django-cors-headers = "*"
 
 [dev-packages]
 
